1999-01-07  Jonathan Blandford  <jrb@redhat.com>

	* gnome-entry.c (gnome_entry_save_history): changed a bit.  Now
	it's a little tiny bit more efficient, and no longer will save
	duplicate fields.
	(check_for_duplicates): new function.

1999-01-07  Chris Lahey  <clahey@umich.edu>

	* gnome-paper-selector.h, gnome-paper-selector.c
	(gnome_paper_selector_get_width, gnome_paper_selector_get_height):
	Changed it so that these always returned values in units.  Also
	added functions to return the margin values.

1999-01-07  Nat Friedman  <nat@nat.org>

	* gnome-uidefs.h: Replaced (GDK_CONTROL_MASK||GDK_SHIFT_MASK) with (GDK_CONTROL_MASK|GDK_SHIFT_MASK) throughout.

Wed Jan 06 22:32:03 1999  George Lebl  <jirka@5z.com>

	* gnome-app-helper.h: fix properties/preferences stock icons

1999-01-07  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h Added GNOME_MENU_OPTIONS_STRING and _PATH.
	
1999-01-07  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h (GNOMEUIINFO_MENU_OPTIONS_TREE): New standard
 	menu.

Wed Jan 06 21:36:16 1999  George Lebl  <jirka@5z.com>

	* gnome-uidefs.h,gnome-app-helper.h: added Find and Replace items
	  and default keybindings for those

1999-01-07  Jonathan Blandford  <jrb@redhat.com>

	* gnome-app.c (gnome_app_set_statusbar): okay -- lets try again.
	The old spacing wasn't liked so it's now down to 0 pixels.

Wed Jan 06 21:13:54 1999  George Lebl  <jirka@5z.com>

	* gnome-app-helper.h: Added strings for use in menu path
	  for inserting,deleting,mdi,etc..., and added a standard
	  "File_s" toplevel menu

1999-01-07  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h (GNOMEUIINFO_MENU_PRINT_ITEM): Corrected a
 	typo.
	(GNOMEUIINFO_MENU_ABOUT_ITEM): Another typo.

1999-01-06  Nat Friedman  <nat@nat.org>

	* gnome-uidefs.h
 	(GNOME_KEY_NAME_PRINT), (GNOME_KEY_MOD_PRINT_SETUP): Added
 	standard hotkeys for printing.

	* gnome-app-helper.h (GNOMEUIINFO_MENU_PRINT_ITEM),
	(GNOMEUIINFO_MENU_PRINT_SETUP_ITEM): Use the new standard hotkeys.
