@@ -1,3 +1,14 @@
+1999-01-08  Nat Friedman  <nat@nat.org>
+
+	* gnome-app-helper.h (GNOMEUIINFO_MENU_FIND_AGAIN_ITEM): New menu
+ 	item.
+
+	* gnome-uidefs.h: Changed to a new set of hotkeys.
+
+1999-01-07  Nat Friedman  <nat@nat.org>
+
+	* gnome-app-helper.h Changed the Options menu to Settings.
+
 1999-01-07  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-entry.c (gnome_entry_save_history): changed a bit.  Now
